# ReadStat

./: .gitignore  .travis.yml  LICENSE  Makefile  Makefile.am  NEWS  README.md  appveyor.yml  autogen.sh  configure.ac  variablemetadata_schema.json
.appveyor/: build_script.bat  install.bat
.github/workflows/: build.yml  codecov.yml  fuzz.yml
.travis/: autogen.sh  configure.sh
VS17/: PropertySheet.props  ReadStat.sln  ReadStat.vcxproj  ReadStat.vcxproj.filters
VS17/ReadStat.App/: ReadStat.App.vcxproj  ReadStat.App.vcxproj.filters
VS17/ReadStat.Tests/: ReadStat.Tests.vcxproj  ReadStat.Tests.vcxproj.filters
VS17/ReadStat_App/: ReadStat_App.vcxproj  ReadStat_App.vcxproj.filters
VS17/ReadStat_Test_double_decimals/: ReadStat_Test_double_decimals.vcxproj  ReadStat_Test_double_decimals.vcxproj.filters
VS17/ReadStat_Test_dta_days/: ReadStat_Test_dta_days.vcxproj  ReadStat_Test_dta_days.vcxproj.filters
VS17/ReadStat_Test_readstat/: ReadStat_Test_readstat.vcxproj  ReadStat_Test_readstat.vcxproj.filters
VS17/ReadStat_Test_sav_date/: ReadStat_Test_sav_date.vcxproj  ReadStat_Test_sav_date.vcxproj.filters
fuzz/dict/: fuzz_grammar_dta_timestamp.dict  fuzz_grammar_por_double.dict  fuzz_grammar_sav_date.dict  fuzz_grammar_sav_time.dict  fuzz_grammar_spss_format.dict  fuzz_grammar_xport_format.dict
man/: extract_metadata.man  readstat.man
src/: readstat.h  readstat_bits.c  readstat_bits.h  readstat_convert.c  readstat_convert.h  readstat_dta.c  readstat_dta.h  readstat_dta_parse_timestamp.c  readstat_dta_parse_timestamp.rl  readstat_dta_read.c  readstat_dta_write.c  readstat_error.c  readstat_iconv.h  readstat_io.c  readstat_io.h  readstat_io_unistd.c  readstat_io_unistd.h  readstat_malloc.c  readstat_metadata.c  readstat_parser.c  readstat_por.c  readstat_por.h  readstat_por_parse.c  readstat_por_parse.h  readstat_por_parse.rl  readstat_por_read.c  readstat_por_write.c  readstat_rdata.c  readstat_rdata.h  readstat_sas.c  readstat_sas.h  readstat_sas_catalog.c  readstat_sas_data.c  readstat_sas_write.c  readstat_sav.c  readstat_sav.h  readstat_sav_parse.c  readstat_sav_parse.h  readstat_sav_parse.rl  readstat_sav_parse_timestamp.rl  (+9 more)
src/fuzz/: Makefile  fuzz_compression_sas_rle.c  fuzz_compression_sav.c  fuzz_format.c  fuzz_format.h  fuzz_format_dta.c  fuzz_format_por.c  fuzz_format_sas7bcat.c  fuzz_format_sas7bdat.c  fuzz_format_sas_commands.c  fuzz_format_sav.c  fuzz_format_spss_commands.c  fuzz_format_stata_dictionary.c  fuzz_format_xport.c  fuzz_grammar_dta_timestamp.c  fuzz_grammar_por_double.c  fuzz_grammar_sav_date.c  fuzz_grammar_sav_time.c  fuzz_grammar_spss_format.c  fuzz_grammar_xport_format.c  fuzz_rle_sas_compress.c  fuzz_rle_sas_decompress.c  fuzzer.c  fuzzer_dta.c  fuzzer_sas7bdat.c  generate_corpus.c
src/sas/: ieee.c  readstat_sas.c  readstat_sas.h  readstat_sas7bcat_read.c  readstat_sas7bdat_read.c  readstat_sas7bdat_write.c  readstat_sas_catalog.c  readstat_sas_data.c  readstat_sas_rle.c  readstat_sas_rle.h  readstat_sas_write.c  readstat_xport_parse_format.c  readstat_xport_parse_format.h  readstat_xport_parse_format.rl  readstat_xport_read.c  readstat_xport_write.c
src/spss/: readstat_por.h  readstat_por_parse.c  readstat_por_parse.rl  readstat_por_read.c  readstat_por_write.c  readstat_sav.c  readstat_sav.h  readstat_sav_compress.c  readstat_sav_compress.h  readstat_sav_date.c  readstat_sav_date.h  readstat_sav_parse.c  readstat_sav_parse.rl  readstat_sav_parse_timestamp.rl  readstat_sav_read.c  readstat_sav_write.c  readstat_spss.c  readstat_spss.h  readstat_spss_parse.rl  readstat_zsav_compress.c  readstat_zsav_compress.h  readstat_zsav_read.c
src/stata/: readstat_dta.c  readstat_dta.h  readstat_dta_days.h  readstat_dta_parse_timestamp.c  readstat_dta_parse_timestamp.rl  readstat_dta_read.c  readstat_dta_write.c
src/test/: test_buffer.c  test_buffer.h  test_buffer_io.c  test_buffer_io.h  test_double_decimals.c  test_dta.c  test_dta.h  test_dta_days.c  test_error.c  test_error.h  test_list.h  test_read.c  test_read.h  test_readstat.c  test_readstat.h  test_sas.c  test_sas.h  test_sav.c  test_sav.h  test_sav_date.c  test_types.h  test_write.c  test_write.h
src/txt/: readstat_copy.c  readstat_copy.h  readstat_dct_read.c  readstat_dct_read.h  readstat_dct_read.rl  readstat_sas_commands_read.c  readstat_sas_commands_read.h  readstat_sas_commands_read.rl  readstat_schema.c  readstat_schema.h  readstat_spss_commands_read.c  readstat_spss_commands_read.h  readstat_spss_commands_read.rl  readstat_stata_dictionary_read.c  readstat_stata_dictionary_read.h  readstat_stata_dictionary_read.rl  readstat_txt_read.c  readstat_txt_read.h
